Closed Bug 1099260 Opened 11 years ago Closed 11 years ago

Fix up AndroidDecoderModule error handling and logging

Categories

(Firefox for Android Graveyard :: Audio/Video, defect)

All
Android
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Firefox 36

People

(Reporter: snorp, Assigned: snorp)

Details

Attachments

(1 file)

There is a bunch of printf_stderr() and duplicated boiler plate for handling the nsresult. It should get cleaned up.
Attachment #8523076 - Flags: review?(cpearce) → review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 36
Can QA pick up this bug for testing?will someone update test steps
This is a cleanup bug and not expected that QA would verify.
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: