Bug 1099260 - Clean up logging and error handling in AndroidDecoderModule r=cpearce

--HG--
extra : rebase_source : 6cbdd6e7f7874ecebbfe464cf167e03996ec7b06